--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row" style="margin-right: 10px;">
             <div class="col-8 col-md-4 myimg" style="position: relative;">
                 <div class="card photo">
-                    <img src="css/fb dp.jpg" alt="my img">                  
+                    <img src="../images/fb dp.jpg" alt="my img">                  
                 </div>
                 <div class="box" id="cvbox">                   
                     <div class="content">
