--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row" style="margin-right: 10px;">
             <div class="col-8 col-md-4 myimg" style="position: relative;">
                 <div class="card photo">
-                    <img src="../images/fb dp.jpg" alt="my img">                  
+                    <img src="../images/examplecv.jpg" alt="my img">                  
                 </div>
                 <div class="box" id="cvbox">                   
                     <div class="content">
@@ -71,7 +71,7 @@
                         </div>
                     </div>                                                           
                 </div> 
-                <a id="link" onclick="Download(event)" href="css/Waqas CV.pdf" download class="boxbefore button">Download CV</a>                           
+                <a id="link" onclick="Download(event)" href="css/CV.pdf" download class="boxbefore button">Download CV</a>                           
             </div>
             <div class="col-md-8 description">
                 <h4>Graduated from the Polytechnic University of Durango 
