Projects working from Json

--- a/index.html
+++ b/index.html
@@ -434,25 +434,9 @@
                 <div class="TableContent">
                     <table id="NameCompany_List" class="table table-striped table-dark table-hover table-responsive"></table>
                 </div> 
-                <div class="ProjectsList">
+                <div id="ProjectLst" class="ProjectsList">
                     <h3 style="text-align: center;">Projects</h3>
                     <hr>
-                    <ul id="lst">
-                        <li>
-                            <input type="checkbox" name="list" id="nivel">
-                            <label for="nivel">Name</label>
-                            <ul class="interior">
-                                <li>
-                                    <div class="">
-                                        <img src="">
-                                        <hr> 
-                                        <p></p>
-                                        <a class="btn btn-dark" href="">See more</a>
-                                    </div>
-                                </li>                             
-                            </ul>                                 
-                        </li>
-                    </ul>
                   </div>              
             </div>           
         </div>
