--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
                 <div id="ProjectLst" class="ProjectsList">
                     <h3 style="text-align: center;">Projects</h3>
                     <hr>
-                  </div>              
+                    <div id="root_projects"></div>
+                </div>              
             </div>           
         </div>
     </div>
