--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
             <h2>Featured Projects</h2>
         </div>
         <div class="row px-2">
-            
+            <div class="Featured">
+
+            </div>
         </div>
     </div>
                                             <!-- Skills --> 
