--- a/index.html
+++ b/index.html
@@ -231,8 +231,14 @@
         </div>
         <div class="row px-2">
             <div class="Featured">
-
-            </div>
+                <video autoplay loop muted tabindex="0" controls width="200" height="400" style=" 
+                position: absolute;
+                left: 13px;
+                top: -9px;
+                border-radius: 2.7rem;">
+                    <source src="./images/featured/pet.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                </video>
+            </div>           
         </div>
     </div>
                                             <!-- Skills --> 
