--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/badges.css">
     <link rel="stylesheet" href="css/chart.css">
     <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/featured.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -229,16 +230,22 @@
         <div class="title">
             <h2>Featured Projects</h2>
         </div>
-        <div class="row px-2">
-            <div class="Featured">
-                <video autoplay loop muted tabindex="0" controls width="200" height="400" style=" 
-                position: absolute;
-                left: 13px;
-                top: -9px;
-                border-radius: 2.7rem;">
+        <div class="row px-2" style="margin-top: 50px;">
+            <div class="PetVideo">
+                <video autoplay loop muted tabindex="0" controls width="200" height="400">
                     <source src="./images/featured/pet.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
-            </div>           
+                <span id="firstPetSpan">Coverage: 80%</span>
+            </div> 
+            <div class="Petinfo">
+                <h3>PET FINDER</h3>
+                <p style="color: #a8a8a8; margin-top: 10px;">powered by: <span></span></p>
+                <div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
+                    </p>
+                </div>
+            </div>       
         </div>
     </div>
                                             <!-- Skills --> 
