--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     <!-- Home --> 
     <div id="home" class="container-fluid home p-0">
-            <nav class="Logo navbar navbar-expand-md navbar-dark fixed-top px-5" style="z-index: 3;">
+            <nav class="Logo navbar navbar-expand-md navbar-dark fixed-top px-5" style="z-index: 6;">
                 <a href="#" class="navbar-brand"><span class="kangi">烏</span>Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsecontent" aria-controls="collapsecontent" aria-expanded="false" aria-label="Toggle navigation" style="border-color: transparent;">
                     <span class="navbar-toggler-icon"></span>
@@ -230,9 +230,9 @@
         <div class="title">
             <h2>Featured Projects</h2>
         </div>
-        <div class="row px-2" style="margin-top: 50px;">
+        <div class="row px-2" style="margin-top: 50px; margin-bottom: -20px;">
             <div class="PetVideo">
-                <video autoplay loop muted tabindex="0" controls width="200" height="400">
+                <video autoplay loop muted tabindex="0" width="200" height="400">
                     <source src="./images/featured/pet.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
                 <span id="firstPetSpan">Coverage: 80%</span>
@@ -240,6 +240,24 @@
             <div class="Petinfo">
                 <h3>PET FINDER</h3>
                 <p style="color: #a8a8a8; margin-top: 10px;">powered by: <span></span></p>
+                <div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
+                    </p>
+                </div>
+            </div>       
+        </div>
+        <hr style="background-color: currentColor;">
+        <div class="row px-2" style="margin-top: 45px;">
+            <div class="LixVideo">
+                <video autoplay loop muted tabindex="0" width="400" height="200">
+                    <source src="./images/featured/lixenium.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                </video>
+                <span id="firstLixSpan">Coverage: 50%</span>
+            </div> 
+            <div class="Lixinfo">
+                <h3>LIXENIUM</h3>
+                <p style="color: #a8a8a8; margin-top: 10px; margin-left: 160px;">powered by: <span></span></p>
                 <div>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
