--- a/index.html
+++ b/index.html
@@ -225,15 +225,10 @@
             </div>
         </div>
     </div>
-     <!-- Projects--> 
-     <div class="custom-shape-divider-bottom-1610607306">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-            <path fill="#0099ff" fill-opacity="1" d="M0,192L120,208C240,224,480,256,720,240C960,224,1200,160,1320,128L1440,96L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z" class="shape-fill"></path>
-        </svg>
-    </div>
+     <!-- Projects-->     
     <div id="projects" class="container-fluid services">
         <div class="title">
-            <h2>Featured Projects</h2>
+            <h2 style="background: #272727;">Featured Projects</h2>
         </div>
         <div class="row px-2" style="margin-top: 50px; margin-bottom: -20px;">
             <div class="PetVideo">
