--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div> 
             <div class="Petinfo">
                 <h3>PET FINDER</h3>
-                <p style="color: #a8a8a8; margin-top: 10px;">powered by: <span></span></p>
+                <p>powered by: <span></span></p>
                 <div>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
@@ -257,7 +257,7 @@
             </div> 
             <div class="Lixinfo">
                 <h3>LIXENIUM</h3>
-                <p style="color: #a8a8a8; margin-top: 10px; margin-left: 160px;">powered by: <span></span></p>
+                <p>powered by: <span></span></p>
                 <div>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
