Fixing List and replace dots to svg in list

--- a/index.html
+++ b/index.html
@@ -216,11 +216,14 @@
                 <hr>
                 <div class="aboutcontent">
                     <p>I am a web, mobile and videogame developer applying <strong>UX</strong> concepts, although my strength is frontend</p>
-                    <p>I have also programmed online videogames, consumption of APIs and worked with databases.</p>                        
-                    <strong>Hobbies:</strong>
-                    <p>Play piano <span id="ic" class="icons pianoico"></span>
-                    </p>
-                    <p>Learn new stuff (actually Quantum Cumputing)<span id="ic" class="icons quantumico"></span></p>
+                    <strong>Strongs:</strong>
+                    <ul>
+                        <li>SOLID principles.</li>
+                        <li>HIGHT OOP Knowledge.</li>
+                        <li>DESIGN PATTERNS knowledge.</li>
+                        <li>MULTI-THREADING Knowledge.</li>
+                        <li>Experience with agile methodologies & GIT.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -242,7 +245,7 @@
                 <p>powered by: <span></span></p>
                 <div>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odit vitae, enim pariatur quis, quam harum, rerum quaerat dolor eaque officia facilis perspiciatis cum esse inventore neque voluptatum libero praesentium!
+                        PetFinder emerged as a project between two people with the aim of helping pet owners to recover their lost friends, the application has functions to register pets, generate pdfs, create posts and adheres to UX principles.
                     </p>
                 </div>
             </div>       
