--- a/index.html
+++ b/index.html
@@ -208,21 +208,16 @@
                 <a id="link" onclick="Download(event)" href="css/CV.pdf" download class="boxbefore button">Download CV</a>                           
             </div>
             <div class="col-md-8 description">
-                <h4>Graduated from the Polytechnic University of Durango 
-                    <a href="https://goo.gl/maps/EqtpqcYgcjDoiCFy6" class="maps toolTip">
-                        <span class="tooltiptext">Find it here!</span>
-                    </a>
-                </h4>
-                <hr>
                 <div class="aboutcontent">
-                    <p>I am a web, mobile and videogame developer applying <strong>UX</strong> concepts, although my strength is frontend</p>
+                    <p>I am a web, mobile and videogame developer applying <strong>UX</strong> concepts.</p>
+                    <hr>
                     <strong>Strongs:</strong>
                     <ul>
-                        <li>SOLID principles.</li>
-                        <li>HIGHT OOP Knowledge.</li>
-                        <li>DESIGN PATTERNS knowledge.</li>
-                        <li>MULTI-THREADING Knowledge.</li>
-                        <li>Experience with agile methodologies & GIT.</li>
+                        <li><strong>SOLID</strong> principles.</li>
+                        <li>Hight <strong>OOP</strong> Knowledge.</li>
+                        <li><strong>DESIGN PATTERNS</strong> knowledge.</li>
+                        <li><strong>MULTI-THREADING</strong> Knowledge.</li>
+                        <li>Experience with <strong>AGILE METHODOlOGIES</strong> & <strong>GIT</strong></li>
                     </ul>
                 </div>
             </div>
@@ -231,11 +226,11 @@
      <!-- Projects-->     
     <div id="projects" class="container-fluid services">
         <div class="title">
-            <h2 style="background: #272727;">Featured Projects</h2>
+            <h2>Featured Projects</h2>
         </div>
         <div class="row px-2" style="margin-top: 50px; margin-bottom: -20px;">
             <div class="PetVideo">
-                <video autoplay loop muted tabindex="0" width="200" height="400">
+                <video autoplay loop muted playsinline data-threshold="0" poster="./images/flutter/pet1.png" preload="none" tabindex="0" width="200" height="400">
                     <source src="./images/featured/pet.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
                 <span id="firstPetSpan">Coverage: 80%</span>
@@ -253,7 +248,7 @@
         <hr style="background-color: currentColor;">
         <div class="row px-2" style="margin-top: 45px;">
             <div class="LixVideo">
-                <video autoplay loop muted tabindex="0" width="400" height="200">
+                <video autoplay loop muted playsinline data-threshold="0" poster="./images/unity/lixenium/lixenium1.png" preload="none" tabindex="0" width="400" height="200">
                     <source src="./images/featured/lixenium.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
                 <span id="firstLixSpan">Coverage: 50%</span>
