--- a/index.html
+++ b/index.html
@@ -467,8 +467,7 @@
                     <table id="NameCompany_List" class="table table-striped table-dark table-hover table-responsive"></table>
                 </div> 
                 <div id="ProjectLst" class="ProjectsList">
-                    <h3 style="text-align: center;">Projects</h3>
-                    <hr>
+                    <h3 id="ProjectH3" style="text-align: center;">Projects</h3>
                     <div id="root_projects"></div>
                 </div>              
             </div>           
