Adding Among Spikes info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/progressbar.css">
     <link rel="stylesheet" href="css/tooltips.css">
-    <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="stylesheet" href="css/badges.css">
     <link rel="stylesheet" href="css/chart.css">
     <link rel="stylesheet" href="css/loader.css">
@@ -247,12 +246,12 @@
             </div>       
         </div>
         <hr style="background-color: currentColor;">
-        <div class="row px-2" style="margin-top: 45px;">
+        <div class="row px-2" style="margin-top: 45px; margin-bottom: -100px;">
             <div class="LixVideo">
                 <video autoplay loop muted playsinline data-threshold="0" poster="./images/unity/lixenium/lixenium1.png" preload="none" tabindex="0" width="400" height="200">
                     <source src="./images/featured/lixenium.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
-                <span id="firstLixSpan">Coverage: 50%</span>
+                <span id="firstLixSpan">Coverage: 80%</span>
             </div> 
             <div class="Lixinfo">
                 <h3>LIXENIUM</h3>
@@ -262,7 +261,27 @@
                         Lixenium is an online multiplayer, play and destroy your enemies in a real time equalizer that adjusts to the music of each player. accumulate points, use power ups and chat !
                     </p>
                 </div>
-            </div>       
+            </div>        
+        </div>
+        <hr style="background-color: currentColor;">
+        <div class="row px-2" style="margin-top: 45px;">
+            <div class="AmongVideo">
+                <video autoplay loop muted playsinline data-threshold="0" poster="./images/unity/among_spikes/among1.png" preload="none" tabindex="0" width="400" height="200">
+                    <source src="./images/featured/among.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                </video>
+                <span id="firstAmongSpan">Coverage: 100%</span>
+            </div> 
+            <div class="AmongInfo">
+                <h3>AMONG SPIKES</h3>
+                <p>powered by: <span></span></p>
+                <div>
+                    <p>
+                        You rotate around a spiked sphere. accumulate points destroying enemies and enjoy the music. I hope you relax with this endless level !
+                    </p>
+                    <a href="https://play.google.com/store/apps/details?id=mayenstudios.amongspikes&hl=es&gl=US" class="btn" style="    
+                    background: -webkit-linear-gradient(95deg,#76d4f8,#3b94ffed); color: white; font-weight: bold;">See more</a>
+                </div>
+            </div>        
         </div>
     </div>
                                             <!-- Skills --> 
@@ -490,58 +509,9 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item border-0"><span><i class="fa fa-user" aria-hidden="true"></i></span>Christian Avila</li>
-                        <a href="ravensan9721@gmail.com" class="list-group-item border-0"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>ravensan9721@gmail.com</a>
-                        <a href="tel:+526181595214" class="list-group-item border-0"><span><i class="fa fa-phone-square" aria-hidden="true"></i></span>+52 6181595214</a>
-                        <!--<a href="https://www.facebook.com/" class="list-group-item border-0"><span><i class="fab fa-facebook-square" aria-hidden="true"></i></span>Facebook</a>-->
+                        <p class="list-group-item border-0"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>ravensan9721@gmail.com</p>
+                        <p class="list-group-item border-0"><span><i class="fa fa-phone-square" aria-hidden="true"></i></span>+52 6181595214</p>
                     </ul>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6">
-                <div class="right-column">                   
-                    <form >
-                        <div class="card">
-                            <div class="card-header text-center">
-                                <h3>Message me</h3>
-                            </div>                       
-                            <div class="card-body">
-                                <div class="form-group input-hover">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text">
-                                                <span><i class="fa fa-user" aria-hidden="true"></i></span>
-                                            </div>
-                                        </div>
-                                    <input type="text" class="form-control" placeholder="enter your name" required>
-                                    </div>
-                                </div>    
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text">
-                                                <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                                            </div>
-                                        </div>
-                                        <input type="email" class="form-control" placeholder="enter your email" required>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text">
-                                                <span><i class="fa fa-comments" aria-hidden="true"></i></span>
-                                            </div>
-                                        </div>
-                                        <textarea class="form-control" placeholder="message here" required></textarea>
-                                    </div>
-                                </div>
-                                <div class="text-center">
-                                    <input type="submit" class="btn form-control" value="Send">
-                                </div>
-                            </div>
-                        </div>
-                        
-                    </form>
-
                 </div>
             </div>
         </div>
