--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@
                 <h2>Contact me</h2>
             </div>  
         </div>
-        <div class="row p-5">
-            <div class="col-12 col-lg-6">
+        <div class="row p-5" style="margin: auto;">
+            <div>
                 <div class="left-column">
                     <div class="text">
                         <h3>Feel free to contact</h3>
