[FEAT] metadata image added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:site" content="https://christian9721.github.io/Portfolio/" /> <!-- website link -->
 	<meta property="og:title" content="Welcome to my portfolio!"/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="find out about my projects ❤️" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://mayenstudios.github.io/mayenstudios/images/background.jpg" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:image" content="https://mayen-studios.github.io/Home/images/background.jpg" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="https://christian9721.github.io/Portfolio/" /> <!-- where do you want your post to link to -->
     <meta property="og:type" content="article" />
     <meta property="fb:pages" content="2114072278862068" /> 
