[FIX] button position on devices

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 </button>
                 <div data-depth="0.2" class="collapse navbar-collapse" id="collapsecontent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mr-3"><a href="#home" class="nav-link">Home</a></li>
                         <li class="nav-item mr-3"><a href="#about" class="nav-link">About</a></li>
                         <li class="nav-item mr-3"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item mr-3"><a href="#skills" class="nav-link">Skills</a></li>
@@ -96,6 +95,7 @@
     <div id="about" class="fade container-fluid about">
         <div class="title">
             <h1>Who I am?</h1>
+            <h2 class="Subtitle">I'm a web, mobile and videogame developer applying <strong>UX</strong> concepts.</h2>
         </div>
         <div class="row aboutCard">
             <div class="col-8 col-md-4 myimg" style="position: relative;">
@@ -114,16 +114,15 @@
                 <a id="link" onclick="Download(event)" href="css/CV.pdf" download class="boxbefore button">Download CV</a>                           
             </div>
             <div class="col-md-8 description">
-                <div class="aboutcontent">
-                    <p>I'm a web, mobile and videogame developer applying <strong>UX</strong> concepts.</p>
-                    <hr>
+                <div class="aboutcontent">                  
                     <strong>Strongs:</strong>
                     <ul>
                         <li><strong>SOLID</strong> principles.</li>
                         <li>Hight <strong>OOP</strong> Knowledge.</li>
+                        <li>Experience using <strong>REGEX</strong></li>
                         <li><strong>DESIGN PATTERNS</strong> knowledge.</li>
                         <li><strong>MULTI-THREADING</strong> Knowledge.</li>
-                        <li>Experience with <strong>AGILE METHODOlOGIES</strong> & <strong>GIT</strong></li>
+                        <li>Experience with <strong>AGILE METHODOlOGIES</strong> & <strong>GIT</strong></li>                       
                     </ul>
                 </div>
             </div>
@@ -170,7 +169,7 @@
                     <source src="./images/featured/lixenium.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
                 <span id="firstLixSpan">Coverage: 80%</span>
-                <a href='#'class='playBut' onclick="testVideo(event, 'triggerLix')" style="left: 62%; top: 11%;">                     
+                <a href='#'class='playBut' onclick="testVideo(event, 'triggerLix')">                     
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="100px" height="100px" viewBox="0 0 213.7 213.7" enable-background="new 0 0 213.7 213.7"
@@ -199,7 +198,7 @@
                     <source src="./images/featured/among.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                 </video>
                 <span id="firstAmongSpan">Coverage: 100%</span>
-                <a href='#'class='playBut' onclick="testVideo(event,'triggerAmong')" style="left: 62%; top: 11%;">                     
+                <a href='#'class='playBut' onclick="testVideo(event,'triggerAmong')">                     
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="100px" height="100px" viewBox="0 0 213.7 213.7" enable-background="new 0 0 213.7 213.7"
