[FEAT] Adding icon, gifs and fix resolution on mobile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta property="fb:pages" content="2114072278862068" /> 
 
     <title>My Portfolio</title>
+    <!--FAVICON-->
+    <link rel="icon" href="images/favicon.png">
+    <!--FAVICON-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/progressbar.css">
     <link rel="stylesheet" href="css/tooltips.css">
@@ -99,8 +102,8 @@
         </div>
         <div class="row aboutCard">
             <div class="col-8 col-md-4 myimg" style="position: relative;">
-                <div class="card photo">
-                    <img class="chromatic-aberration scale" src="./images/examplecv.jpg" alt="picture">                  
+                <div id="parallax" class="card photo">
+                    <img  class="chromatic-aberration scale" src="./images/temp.gif" alt="picture">                  
                 </div>
                 <div class="box" id="cvbox">                   
                     <div class="content">
@@ -129,7 +132,7 @@
         </div>
     </div>
      <!-- Projects-->     
-    <div id="projects" class="fade container-fluid services">
+    <div id="projects" class="fade container-fluid services" style="overflow: hidden;">
         <div class="title">
             <h2>Featured Projects</h2>
         </div>
@@ -447,7 +450,9 @@
                         <p>You can contact me anytime in the below platform. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, facilis.</p>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item border-0"><span><i class="fa fa-user" aria-hidden="true"></i></span>Christian Avila</li>
+                        <li class="list-group-item border-0">
+                            <span><i class="fa fa-user" aria-hidden="true"></i></span>Christian Avila                           
+                        </li>
                         <p class="list-group-item border-0"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>ravensan9721@gmail.com</p>
                         <p class="list-group-item border-0"><span><i class="fa fa-phone-square" aria-hidden="true"></i></span>+52 6181595214</p>
                     </ul>
