[FIX] changes 'IA' to 'AI'

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div  style="position: relative; display: contents;">
                 <!-- <img src="./images/cat/channel.png" class="mayenlogo"/> -->
                 <div class="infochannel">
-                    <h4><span id="js-rotating">Quantum computing,UX,UI,Videogames,Mobile Apps, IA </span><a href="https://www.youtube.com/c/MayenStudios" class="btn btn-dark">TUTORIALS</a></h4>
+                    <h4><span id="js-rotating">Quantum computing,UX,UI,Videogames,Mobile Apps, AI </span><a href="https://www.youtube.com/c/MayenStudios" class="btn btn-dark">TUTORIALS</a></h4>
                 </div>
             </div>
             
